SKRIT-346: Stopgap hack for buttons so they appear right on Samsung Galaxy S6.

--- a/app/components/study/prompt/MobileStudyPromptComponent.scss
+++ b/app/components/study/prompt/MobileStudyPromptComponent.scss
@@ -1,7 +1,6 @@
 @import "../../../styles/_variables";
 
 gelato-component[data-name='mobile-study-prompt'] {
-
   background-color: $white1;
   border-radius: 5px;
   height: 100%;
@@ -18,6 +17,7 @@ gelato-component[data-name='mobile-study-prompt'] {
     position: absolute;
     width: 100%;
     z-index: 7000;
+
     .btn {
       i {
         margin: 0 5px;
@@ -32,11 +32,13 @@ gelato-component[data-name='mobile-study-prompt'] {
     border-bottom-right-radius: 5px;
     height: 50%;
     padding: 10px;
+
     .content {
       margin: 0 auto;
       max-width: 1000px;
       position: relative;
       width: 100%;
+
       #input-container {
         background-color: $white1;
         cursor: pointer;
@@ -64,6 +66,7 @@ gelato-component[data-name='mobile-study-prompt'] {
           top: 0;
           width: 100%;
         }
+
         #toolbar-grading-container {
           bottom: -30px;
           left: 0;
@@ -77,9 +80,9 @@ gelato-component[data-name='mobile-study-prompt'] {
         width: 96%;// [the original aspect ratio] 25/26 = 96%;
         position: relative;
         box-sizing: border-box;
+        padding: 0 10px;
 
         i {
-          background-size: cover;
           display: block;
           padding: 0;
           padding-bottom: 100%;
@@ -87,15 +90,17 @@ gelato-component[data-name='mobile-study-prompt'] {
       }
 
       #toolbar-action-container {
-        margin-top: 15px;
+        margin-top: 0;
       }
 
       gelato-component[data-name='study-prompt-navigation'] {
         font-size: 8vh;
         top: 30%;
+
         #navigate-next {
           right: 0;
         }
+
         #navigate-previous {
           left: 0;
         }
@@ -105,9 +110,11 @@ gelato-component[data-name='mobile-study-prompt'] {
         .answer {
           font-size: 4vh;
         }
+
         .question {
           font-size: 4vh;
         }
+
         .writing {
           font-size: 10vh;
         }
@@ -117,9 +124,11 @@ gelato-component[data-name='mobile-study-prompt'] {
         .answer {
           font-size: 4vh;
         }
+
         .question {
           font-size: 4vh;
         }
+
         .writing {
           font-size: 10vh;
         }
@@ -131,8 +140,8 @@ gelato-component[data-name='mobile-study-prompt'] {
           margin-top: -20px;
         }
       }
-
     }
+
     .ribbon {
       left: 0;
       position: absolute;
@@ -149,30 +158,38 @@ gelato-component[data-name='mobile-study-prompt'] {
     margin: 0 1px 0 0;
     min-height: 150px;
     text-align: center;
+
     .content {
       height: 100%;
       overflow-y: auto;
       padding: 0 45px;
       width: 100%;
+
       #toolbar-vocab-container {
         display: none;
       }
+
       #vocab-definition-container {
         margin-top: 15px;
       }
+
       #vocab-mnemonic-container {
         margin-top: 30px;
       }
+
       #vocab-sentence-container {
         margin-top: 30px;
       }
+
       &::-webkit-scrollbar {
         background-color: transparent;
         width: 6px;
       }
+
       &::-webkit-scrollbar-thumb {
         background-color: $grey1;
       }
+
       &::-webkit-scrollbar-track {
         background-color: ($white5 - #030303);
       }
@@ -195,6 +212,7 @@ gelato-component[data-name='mobile-study-prompt'] {
       }
 
     }
+
     #review-status-container {
       bottom: 15px;
       display: none;
@@ -208,5 +226,4 @@ gelato-component[data-name='mobile-study-prompt'] {
     margin-left: 10px;
     margin-right: 10px;
   }
-
 }
